# GenerarGrafoGP

./: .env.example  .gitignore  README.md  main.py  main.sh  nifi_pg_to_neo4j (1).py  notas.txt  pyproject.toml  reset_and_run.sh  schema.txt  schema_extractor.py  test_smtp.py
FlowToGraph/: .gitignore  atlas_terms.csv  config.py  fetch_flows.py  find_files.py  find_scripts.py  find_sql.py  flow_pipeline.py  graph_builder.py  info_clusters.csv  log_setup.py  main.py  main.sh  nifi_extractors.py  nifi_loader.py  nifi_models.py  nifi_parser.py  notas.txt  pyproject.toml  queries.txt  sql_utils.py
Migracion GP/: .env.example  README.md  atlas_migration.py  main.py  main.sh  postprocess_log.py  pyproject.toml  requirements.txt
Migracion GP/src/: apache_atlas.py  config.py  logger.py  neo4j.py  parse_sql.py  pipeline.py
Migracion GP/src/extractors/: extractor.py  sql_utils.py
OrigenToGraph/: __init__.py  config.py  elastic_client.py  hive_client.py  neo4j_client.py  pipeline.py
TermToGraph/: .gitignore  process_atlas_terms.py
TermToGraph/src/: apache_atlas.py  neo4j.py  pipeline.py  search.py
TermToGraph/src/extractors/: dataclasses_extractor.py  zone_service.py
shared/: __init__.py  sql_utils.py
