[project]
name = "generargrafopetersen"
version = "0.1.0"
description = "Unified orchestrator for FlowToGraph and TermToGraph pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "paramiko>=4.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlglot>=29.0.1",
    "sqlparse>=0.5.5",
    "impyla>=0.18.0",
    "thrift>=0.16.0",
    # Note: sasl and thrift-sasl are needed on Linux for SASL-authenticated Hive clusters.
    # Do NOT install them on Windows (require C++ build tools). Add on the target Linux host:
    #   uv add sasl thrift-sasl
    "elasticsearch>=8,<9",
]

[tool.uv]
# Ensure shared module is in the Python path
package = false

[tool.pytest.ini_options]
pythonpath = [".", "shared"]
